Add some future plans to readme, add error handling to telephone numer, change back shipping address views

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -276,7 +276,7 @@
                         <!-- Password fields get toggled by JS -->
                         <div id="password-fields" style="display:none;" aria-expanded="false">
                         <div class="form-group">
-                            <label for="id_password1">Password</label>
+                            <label for="id_password1">Password - Must be 8 digits long</label>
                             <input
                             type="password"
                             id="id_password"
