Change name to white-slitor in img on accessories

--- a/products/templates/products/accessories_shop.html
+++ b/products/templates/products/accessories_shop.html
@@ -15,7 +15,7 @@
                    alt="{{ sliotar.product.name }}"
                    class="img-fluid rounded">
             {% else %}
-              <img src="{% static 'products/12-sliotars.webp' %}"
+              <img src="{% static 'products/white-sliotar.webp' %}"
                    alt="{{ sliotar.product.name }}"
                    class="img-fluid rounded">
             {% endif %}
