Change name of white-slitor in product_list.html

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -14,7 +14,7 @@
     {% elif product.grip %}
       {% static "products/grips.webp" as thumb_url %}
     {% elif product.sliotar %}
-      {% static "products/12-sliotars.webp" as thumb_url %}
+      {% static "products/white-sliotar.webp" as thumb_url %}
     {% else %}
       {% static "images/default-product.png" as thumb_url %}
     {% endif %}
