--- a/products/templates/products/accessories_shop.html
+++ b/products/templates/products/accessories_shop.html
@@ -6,23 +6,18 @@
     <h1 class="text-center">Accessories</h1>
     <div class="row text-center mt-4">
 
-      {# Sliotars #}
       {% for sliotar in sliotars %}
-        <div class="col-md-4 mb-4">
-          <a href="{% url 'products:sliotar_detail' sliotar.product.id %}">
-            {% if sliotar.product.image %}
-              <img src="{{ sliotar.product.image.url }}"
-                   alt="{{ sliotar.product.name }}"
-                   class="img-fluid rounded">
-            {% else %}
-              <img src="{% static 'products/white-sliotar.webp' %}"
-                   alt="{{ sliotar.product.name }}"
-                   class="img-fluid rounded">
-            {% endif %}
-            <h3 class="mt-3">{{ sliotar.product.name }}</h3>
-          </a>
-        </div>
-      {% endfor %}
+         <div class="col-md-4 mb-4">
+           <a href="{% url 'products:sliotar_detail' sliotar.product.id %}">
+             <img
+               src="{% static 'products/white-sliotar.webp' %}"
+               alt="{{ sliotar.product.name }}"
+               class="img-fluid rounded"
+             >
+             <h3 class="mt-3">{{ sliotar.product.name }}</h3>
+           </a>
+         </div>
+       {% endfor %}
 
       {# Helmets #}
       {% for helmet in helmets %}
