Fix naming of white sliotar in product_detail.html

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -14,7 +14,7 @@
       {% elif product.grip %}
         {% static "products/grips.webp" as image_url %}
       {% elif product.sliotar %}
-        {% static "products/12-sliotars.webp" as image_url %}
+        {% static "products/white-sliotar.webp" as image_url %}
       {% elif product.image %}
         {# if you really have an uploaded media fallback #}
         {% with product.image.url as image_url %}{% endwith %}
