--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -74,7 +74,7 @@
                     <div class="form-group">
                         <label for="id_saved_address">Saved Shipping Address</label>
                         <select id="id_saved_address" name="saved_address" class="form-control">
-                            <option value="">Use a new address</option>
+                            <option value="">Use saved address</option>
                             {% for addr in form.fields.saved_address.queryset %}
                                 <option
                                     value="{{ addr.id }}"
@@ -239,61 +239,63 @@
                             <div class="invalid-feedback">{{ err }}</div>
                         {% endfor %}                    
                     </div>
-                    <!-- Save Shipping Address and Create Profile -->
-                    <div class="form-group">
-                        {% if user.is_authenticated %}
-                         <div class="form-check">
-                           <input 
-                             type="checkbox" 
-                             id="save-shipping-address" 
-                             name="store_shipping_address" 
-                             class="form-check-input"
-                             {% if form.store_shipping_address.value %}checked{% endif %}
-                           >
-                           <label for="save-shipping-address" class="form-check-label">
-                             Save Shipping Address
-                           </label>
-                           {% for err in form.store_shipping_address.errors %}
-                             <div class="text-danger small">{{ err }}</div>
-                           {% endfor %}
-                         </div>
-                       {% endif %}
-                        <div class="form-check">
+                    <!-- Save Shipping Address and Create Profile (FUTURE plan disable for now)-->
+                     {% if False %}
+                        <div class="form-group">
+                            {% if user.is_authenticated %}
+                            <div class="form-check">
                             <input 
                                 type="checkbox" 
-                                id="create-profile" 
-                                name="create_user_profile" 
+                                id="save-shipping-address" 
+                                name="store_shipping_address" 
                                 class="form-check-input"
-                                {% if form.create_user_profile.value %}checked{% endif %}
+                                {% if form.store_shipping_address.value %}checked{% endif %}
                             >
-                            <label for="create-profile" class="form-check-label">
-                                Create a profile for faster checkout next time!
+                            <label for="save-shipping-address" class="form-check-label">
+                                Save Shipping Address
                             </label>
-                            {% for err in form.create_user_profile.errors %}
+                            {% for err in form.store_shipping_address.errors %}
                                 <div class="text-danger small">{{ err }}</div>
                             {% endfor %}
+                            </div>
+                        {% endif %}
+                            <div class="form-check">
+                                <input 
+                                    type="checkbox" 
+                                    id="create-profile" 
+                                    name="create_user_profile" 
+                                    class="form-check-input"
+                                    {% if form.create_user_profile.value %}checked{% endif %}
+                                >
+                                <label for="create-profile" class="form-check-label">
+                                    Create a profile for faster checkout next time!
+                                </label>
+                                {% for err in form.create_user_profile.errors %}
+                                    <div class="text-danger small">{{ err }}</div>
+                                {% endfor %}
+                            </div>
+                            <!-- Password fields get toggled by JS -->
+                            <div id="password-fields" style="display:none;" aria-expanded="false">
+                            <div class="form-group">
+                                <label for="id_password1">Password - Must be 8 digits long</label>
+                                <input
+                                type="password"
+                                id="id_password"
+                                name="password"
+                                class="form-control"
+                                >
+                            </div>
+                            <div class="form-group">
+                                <label for="id_password2">Confirm Password</label>
+                                <input
+                                type="password"
+                                id="id_password2"
+                                name="password2"
+                                class="form-control"
+                                >
+                            </div>
                         </div>
-                        <!-- Password fields get toggled by JS -->
-                        <div id="password-fields" style="display:none;" aria-expanded="false">
-                        <div class="form-group">
-                            <label for="id_password1">Password - Must be 8 digits long</label>
-                            <input
-                            type="password"
-                            id="id_password"
-                            name="password"
-                            class="form-control"
-                            >
-                        </div>
-                        <div class="form-group">
-                            <label for="id_password2">Confirm Password</label>
-                            <input
-                            type="password"
-                            id="id_password2"
-                            name="password2"
-                            class="form-control"
-                            >
-                        </div>
-                    </div>
+                    {% endif %}
                 </fieldset>
 
                 <!-- Stripe Payment Details -->
